# rye-uv-workshop

./: .gitignore  LICENSE  README.md
genrenator_rye/: .gitignore  README.md  pyproject.toml
genrenator_rye/src/genrenator_rye/: __main__.py
genrenator_rye/tests/: test_genrenator.py
genrenator_uv/: README.md  pyproject.toml  serve.py  test_serve.py
