[project]
name = "genrenator-rye"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Anna Hope", email = "hello@annahope.me" }
]
dependencies = [
    "quart>=0.19.6",
    "httpx>=0.27.2",
    "mistune>=3.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"genrenator-rye" = "genrenator_rye:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest-asyncio>=0.24.0",
]

[tool.rye.scripts]
devserver = { cmd = "rye run genrenator-rye" }
prodserver = { cmd = "hypercorn genrenator_rye:app" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/genrenator_rye"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"


