[project]
name = "genrenator-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.2",
    "mistune>=3.0.2",
    "quart>=0.19.6",
]

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "ruff>=0.6.4",
]
